--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "final-form": "^4.20.2",
     "firebase": "^8.6.8",
     "hamburger-react": "^2.4.1",
+    "inputmask": "^5.0.6",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
